# RealtimeVoiceClient

./: .env.sample  .gitignore  .gitmodules  QUICKSTART.md  README.md  agent_manager.py  dtln_aec_realtime.py  package-lock.json  package.json  pyproject.toml  start.sh  test_direct_openai.py  voice_chat_client.py  voice_chat_desktop.py
scripts/: install.sh
web/: app-browser.js  app.js  audio-client.js  index.html  ttsPlaybackProcessor.js
