[project]
name = "voice"
version = "0.1.0"
description = "OpenAI Realtime API Voice Chat Client with DTLN-aec Echo Cancellation"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23.0",
    "pyaudio>=0.2.14",
    "scipy>=1.10.1",
    "tensorflow>=2.14.0",
    "webrtcvad>=2.0.10",
    "websocket-client>=1.6.0",
    "eel>=0.16.0",
]

[tool.uv]
package = false
